[package]
name = "rust-wasm-react-example"
version = "0.1.0"
authors = ["Mizuki HAGIMOTO <hagimotomizuki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "console",
]
